# mklndir

./: .gitattributes  .gitignore  GIT_SETUP.md  LICENSE  MANIFEST.in  Makefile  README.md  demo_man.sh  install.sh  install_man.sh  pyproject.toml  setup.py
examples/: example_usage.py
man/: mklndir.1
mklndir/: __init__.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py  test_manpage.py
